src/test/ui/const-generics/ice-const-generic-function-return-ty.rs
// #95163
fn return_ty() -> impl Into<<() as Reexported;
//~^ ERROR expected one of `(`, `::`, `<`, or `>`, found `;`

fn main() {}
